--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-
+Python==3.10.14
+torch==2.2.1
+transformers==4.40.0
+faiss==1.8.0
+tqdm
+trl==0.8.6
+vllm==0.4.1
+accelerate==0.30.1
+deepspeed==0.14.2
+peft==0.10.0
